[FIX] sap.m.Input: ValueStateMessage text wraps correctly now
BCP: 1970116964

--- a/src/sap.m/src/sap/m/themes/base/ValueStateMessage.less
+++ b/src/sap.m/src/sap/m/themes/base/ValueStateMessage.less
@@ -12,8 +12,9 @@
 	font-family: @sapUiFontFamily;
 	padding: 0.3rem 0.625rem;
 	min-width: 6rem;
-	white-space: pre-wrap;
-	word-break: break-all;
+	white-space: pre-line;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 .sapMValueStateMessageError {
